beginners-guide/manifest/hotdrink-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tea-beverage 
spec:
  selector:
    matchLabels:
      app: tea-beverage
  replicas: 2 
  template:
    metadata:
      labels:
        app: tea-beverage
    spec:
      containers:
      - name: tea-beverage
        image: quay.io/sample-apps/hotdrinks:v1
        ports:
        - name: tea-80
          containerPort: 80
#        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: tea-beverage
spec:
  clusterIP: None
  ports:
  - name: tea-80
    port: 80
    targetPort: 80
  selector:
    app: tea-beverage

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coffee-beverage 
spec:
  selector:
    matchLabels:
      app: coffee-beverage
  replicas: 2 
  template:
    metadata:
      labels:
        app: coffee-beverage
    spec:
      containers:
      - name: coffee-beverage
        image: quay.io/sample-apps/hotdrinks:v1
        ports:
        - name: coffee-80
          containerPort: 80
#        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: coffee-beverage
spec:
  clusterIP: None
  ports:
  - name: coffee-80
    port: 80
    targetPort: 80
  selector:
    app: coffee-beverage

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-hotdrinks
spec:
  selector:
    matchLabels:
      app: frontend-hotdrinks
  replicas: 2 
  template:
    metadata:
      labels:
        app: frontend-hotdrinks
    spec:
      containers:
      - name: frontend-hotdrinks
        image: quay.io/sample-apps/hotdrinks:v1
        ports:
        - name: hotdrinks-80
          containerPort: 80
#        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-hotdrinks
spec:
  clusterIP: None
  ports:
  - name: hotdrinks-80
    port: 80
    targetPort: 80
  selector:
    app: frontend-hotdrinks

---
