beginners-guide/manifest/cloudnative-demoapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ns-cn-demo-app-ingress
  annotations:
   ingress.citrix.com/insecure-termination: "redirect"
   ingress.citrix.com/frontend-ip: "x.x.x.x"
spec:
  ingressClassName: vpx
  tls:
  - secretName: cloudnative-secret
  rules:
  - host:  cloudnative.netscalerdemo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: ns-cn-demo-app
            port: 
              number: 80
