beginners-guide/manifest/cloudnative-vpx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ns-vpx-ingress
  annotations:
   ingress.citrix.com/insecure-termination: "redirect"
   ingress.citrix.com/frontend-ip: "x.x.x.x"
spec:
  ingressClassName: vpx
  tls:
  - secretName: cloudnative-secret
  rules:
  - host:  cloudnative.netscalerdemo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: cpx-cpx-service
            port: 
              number: 80
