beginners-guide/manifest/colddrink-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: colddrink-ingress
  annotations:
   kubernetes.io/ingress.class: "citrix"
spec:
  rules:
  - host:  www.colddrink.com
    http:
      paths:
      - path: 
        backend:
          serviceName: frontend-colddrinks
          servicePort: 80
---
