beginners-guide/manifest/hotdrink-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: citrix
spec:
  controller: citrix.com/ingress-controller

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hotdrinks-ingress
spec:
  ingressClassName: citrix  
  rules:
  - host:  hotdrink.beverages.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: frontend-hotdrinks
            port: 
              number: 80
  - host:  tea
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: tea-beverage # headless tea service
            port: 
              number: 80
  - host:  coffee
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: coffee-beverage # headless coffee service
            port: 
              number: 80
