beginners-guide/manifest/standalone-cpx-mode.yaml
#Using a basic apache web server as application for illustration
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache
  labels:
      name: apache
spec:
  selector:
    matchLabels:
      app: apache
  replicas: 6
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
      - name: apache
        image: httpd:latest
        ports:
        - containerPort: 80

---
#Expose the apache web server as a Service
apiVersion: v1
kind: Service
metadata:
  name: apache
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: apache

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpx-ingress
  labels:
    name: cpx-ingress
    app: cpx-ingress
spec:
  selector:
    matchLabels:
      app: cpx-ingress
  replicas: 1
  template:
    metadata:
      name: cpx-ingress
      labels:
        app: cpx-ingress
      annotations: null
    spec:
      serviceAccountName: cpx
      containers:
        - name: cpx-ingress
          image: quay.io/citrix/citrix-k8s-cpx-ingress:13.0-83.27
          tty: true
          securityContext:
             privileged: true
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /var/deviceinfo
              name: shared-data
            - mountPath: /cpx/
              name: cpx-volume
        # Add cic as a sidecar
        - name: cic
          image: quay.io/citrix/citrix-k8s-ingress-controller:1.26.7
          volumeMounts:
          - mountPath: /var/deviceinfo
            name: shared-data
          args:
          - --ingress-classes
              citrix
          imagePullPolicy: Always
      volumes:
      - name: shared-data
        emptyDir: {}
      - name: cpx-volume
        emptyDir: {}
---
#Expose the CPX as a NodePort service
apiVersion: v1
kind: Service
metadata:
  name: cpx-service
  labels:
    app: cpx-service
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    name: http
  - port: 443
    protocol: TCP
    name: https
  selector:
    app: cpx-ingress

---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: citrix
spec:
  controller: citrix.com/ingress-controller
---
#Specify the ingress resource
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: citrix-ingress
spec:
  ingressClassName: citrix
  rules:
  - host:  www.ingress.com
    http:
      paths:
      - path: /
        backend:
          serviceName: apache
          servicePort: 80
